--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,17 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+#appTitle{
+  color: blue;
+  font-size: 200%;
+  font-weight: bolder;
+  text-decoration: underline;
+  text-align: center;
+ 
+  margin-top:3%;
+  margin-bottom: 3%;
 
+}
 .App-link {
   color: #61dafb;
 }
